Upgraded Java 21.